# textgen

./: .gitignore  .gitmodules  CMakeLists.txt  license.md  readme.md
.github/workflows/: linux.yml  windows.yml
app/: debug_opengl.cc  main.cc
apps/app/: CMakeLists.txt
apps/app/src/app/: app.cc  debug_opengl.h  main.cc
cmake/: compress.cmake
examples/: CMakeLists.txt
examples/app/: app.cc  app.h  debug_opengl.cc  debug_opengl.h  main.cc
libs/lib/: CMakeLists.txt
libs/lib/src/textgen/: textgen.cc  textgen.h
src/: CMakeLists.txt
textgen/: textgen.h
